Remove 'arriveBy' from search parameters. We might add a arrive/departure preference later, but it is more likely to be an enum than a boolean flag. This is a user preference that affect the pareto-set (function), but it does not affect the search in any other way(reverse/forward).